Large refactoring
Replace strings with typed string constants.
Run tests in module-aware mode.
Be more resilient to initial database failures.
Remove testcontainers in favour of ervilla.

Affects: https://github.com/io7m/idstore/issues/89